--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,8 +104,8 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0rem;
-  margin-bottom: 0rem;
+  margin-top: 0;
+  margin-bottom: 0;
   font-family: var(--heading-font-family);
   font-weight: 600;
   line-height: 1.25;
