--- a/blocks/filterable-list/filterable-list.css
+++ b/blocks/filterable-list/filterable-list.css
@@ -20,6 +20,11 @@
     color: var(--black, black) !important;
     background-color: antiquewhite;
     border-radius: 1rem;
+    text-decoration: none;
+}
+
+.filterable-list .filterable-list-item:hover {
+    scale: 1.01;
 }
 
 .filterable-list .filterable-list-item.hide {
@@ -38,6 +43,9 @@
 
 .filterable-list .filterable-list-item-content {
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .filterable-list .filterable-list-item-desc{
